# ur5_ws

./: README.md
Universal_Robots_ROS_Driver/ur_calibration/etc/: robot_calibration_e.yaml
Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur5_bringup.launch  ur5_launch.launch  ur5e_bringup.launch
move_rt/: .gitlab-ci.yml  ACKNOWLEDGEMENT  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml
move_rt/action/: ExecutingTrajectory.action
move_rt/config/: gazebo_ros_control_params.yaml  move_rt.rviz  tasks_arm_ur10.yaml  tasks_arm_ur5.yaml  tasks_left_arm.yaml  tasks_left_arm_jointspace.yaml  tasks_right_arm.yaml  tasks_right_arm_jointspace.yaml
move_rt/controllers/: arm_controller_ur5.yaml
move_rt/include/move_rt/: controlmanager.hpp  dqminimizer.hpp  eeposition.hpp  emergencystop.hpp  functions.hpp  jointlimiter.hpp  jointposition.hpp  prioritylevel.hpp  singularityavoidance.hpp
move_rt/launch/: controller_utils.launch  dual_arm_simulation.launch  empty_world.launch  functions_test.launch  robot_simulation.launch  trajectory_test.launch
move_rt/src/: controlmanager.cpp  dqminimizer.cpp  ee_traj_action_client.cpp  eeposition.cpp  emergencystop.cpp  functions.cpp  jointlimiter.cpp  jointposition.cpp  move_rt.cpp  prioritylevel.cpp  singularityavoidance.cpp  trajectory_node.cpp
move_rt/test/: functions_test.cpp
move_rt/traj/: waypoints_test.yaml
move_rt/xacro/: arm_extras_ur5.urdf.xacro  common.gazebo.xacro  end_effectors.urdf.xacro  ur5.urdf.xacro
test/: CMakeLists.txt  package.xml
test/include/: GP_Functions.h  MotionPlanning.h  MyFunc.h  collision_object_lib.h
test/src/: test2.cpp
test/src/PointList/: Test
uc1_simulation/: README.md
uc1_simulation/station_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
uc1_simulation/station_moveit_config/config/: ur5.srdf
uc1_simulation/station_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  ur5_moveit_planning_execution.launch  warehouse.launch
uc1_simulation/station_moveit_config/tests/: moveit_planning_execution.xml
uc1_simulation/uc1_simulation/: CMakeLists.txt  package.xml
uc1_simulation/uc1_simulation/config/: tasks_left_arm.yaml  tasks_right_arm.yaml  uc1_simulation.rviz
uc1_simulation/uc1_simulation/launch/: empty_world.launch  uc1_station_simulation.launch
uc1_simulation/uc1_simulation/models/Gearbox/: model.config  model.sdf
uc1_simulation/uc1_simulation/models/Q1/: Q1_simplified_collision.stl  Q1_simplified_old.stl  model.config  model.sdf
uc1_simulation/uc1_simulation/models/Table/: model.sdf
uc1_simulation/uc1_simulation/models/end_effectors/: UR5-MEG40.stl  UR5-MEG40_simplified.stl  screwdriver.stl  screwdriver_simple.stl
uc1_simulation/uc1_simulation/scene/: table.scene
uc1_simulation/uc1_simulation/xacro/: ur5.urdf.xacro
universal_robot/ur5_e_moveit_config/launch/: moveit.rviz
universal_robot/ur5_moveit_config/config/: controllers.yaml
universal_robot/ur5_moveit_config/launch/: moveit.rviz
universal_robot/ur_driver/: test_move.py
